index.html rename

--- a/pages/cats_shop.html
+++ b/pages/cats_shop.html
@@ -10,7 +10,7 @@
   
   
   <header class="navbar">
-   <a href="/intex.html" class="logo">Pet<span>Care</span></a>
+   <a href="/index.html" class="logo">Pet<span>Care</span></a>
 
 
     <div class="search-container">
