--- a/pages/ordertrack.html
+++ b/pages/ordertrack.html
@@ -8,7 +8,7 @@
 </head>
 <body>
       <header class="navbar">
-    <a href="/intex.html" class="logo">Pet<span>Care</span></a>
+    <a href="/index.html" class="logo">Pet<span>Care</span></a>
 
     <div class="search-container">
       <input type="text" placeholder="Search for pet products...">
