--- a/pages/placeorder.html
+++ b/pages/placeorder.html
@@ -25,7 +25,7 @@
 
   
   <div class="back-home">
-    <a href="/intex.html">BACK TO HOME</a>
+    <a href="/index.html">BACK TO HOME</a>
   </div>
 
   
