--- a/pages/sucessful.html
+++ b/pages/sucessful.html
@@ -18,7 +18,7 @@
     <h2>ORDER PLACED<br>SUCCESSFULLY</h2>
   </div>
 
-  <a href="/intex.html" class="home-btn">BACK TO HOME</a>
+  <a href="/index.html" class="home-btn">BACK TO HOME</a>
 
 </body>
 </html>
