--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -63,7 +63,7 @@
   </table>
 
   
-  <a href="/intex.html" class="back-btn">BACK TO HOME</a>
+  <a href="/index.html" class="back-btn">BACK TO HOME</a>
 
 </body>
 </html>
