--- a/pages/card.html
+++ b/pages/card.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PetCare - Cart</title>
-  <link rel="stylesheet" href="/css_pages/card.css">
+  <link rel="stylesheet" href="../css_pages/card.css">
 </head>
 <body>
 
