--- a/pages/card.html
+++ b/pages/card.html
@@ -20,14 +20,14 @@
     <nav class="nav-links">
       <a href="#">Cart</a>
       <a href="#">Wish List</a>
-      <a href="pages/login_page.html">Login</a>
+      <a href="..pages/login_page.html">Login</a>
     </nav>
   </header>
 
   
   <section class="shop-links">
-    <a href="/pages/dogs_shop.html">Shop for Dogs</a>
-    <a href="/pages/cats_shop.html">Shop for Cats</a>
+    <a href="../pages/dogs_shop.html">Shop for Dogs</a>
+    <a href="../pages/cats_shop.html">Shop for Cats</a>
   </section>
 
   
@@ -41,7 +41,7 @@
       <th>REMOVE</th>
     </tr>
     <tr>
-      <td><img src="/assets/POSTER3.png" width="50" alt="PetCare Logo"></td>
+      <td><img src="../assets/POSTER3.png" width="50" alt="PetCare Logo"></td>
       <td>TOYS</td>
       <td>+ 1 -</td>
       <td>RS:</td>
@@ -49,7 +49,7 @@
       <td class="remove">✖</td>
     </tr>
     <tr>
-      <td><img src="/assets/POSTER2.png" width="50" alt="PetCare Logo"></td>
+      <td><img src="../assets/POSTER2.png" width="50" alt="PetCare Logo"></td>
       <td>FOOD</td>
       <td>+ 1 -</td>
       <td>RS:</td>
