--- a/pages/login_page.html
+++ b/pages/login_page.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pet Care Login</title>
-  <link rel="stylesheet" href="/css_pages/login_css.css">
+  <link rel="stylesheet" href="../css_pages/login_css.css">
 </head>
 <body>
   <div class="login-container">
     <div class="login-left">
       <div class="logo">
-        <img src="/assets/Screenshot 2025-10-22 171656.png" alt="Pet Logo">
+        <img src="../assets/Screenshot 2025-10-22 171656.png" alt="Pet Logo">
         
       </div>
       <h3>Sign In To Continue</h3>
@@ -37,7 +37,7 @@
     </div>
 
     <div class="login-right">
-      <img src="/assets/DOD.jpg" alt="Dog">
+      <img src="../assets/DOD.jpg" alt="Dog">
     </div>
   </div>
 </body>
