--- a/pages/ordertrack.html
+++ b/pages/ordertrack.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css_pages/trackorder.css">
+    <link rel="stylesheet" href="../css_pages/trackorder.css">
 </head>
 <body>
       <header class="navbar">
-    <a href="/index.html" class="logo">Pet<span>Care</span></a>
+    <a href="../index.html" class="logo">Pet<span>Care</span></a>
 
     <div class="search-container">
       <input type="text" placeholder="Search for pet products...">
@@ -16,16 +16,16 @@
     </div>
 
     <nav class="nav-links">
-      <a href="#">Cart</a>
-      <a href="#">Wish List</a>
-      <a href="pages/login_page.html">Login</a>
+      <a href="../pages/card.html">Cart</a>
+      <a href="../pages/wishlist.html">Wish List</a>
+      <a href="../pages/login_page.html">Login</a>
     </nav>
   </header>
   
   <div class="order-container">
     
     <div class="order-header">
-      <img src="/assets/POSTER2.png" alt="Product">
+      <img src="../assets/POSTER2.png" alt="Product">
       <div class="order-details">
         <p><strong>Order Id:</strong> #12345</p>
         <p><strong>Category of Product:</strong> Boy baby category</p>
@@ -62,7 +62,8 @@
     </div>
 
   
-    <button class="cancel-btn"><a href="./Cancel.html">Cancel Request</a></button>
+    <button class="cancel-btn"><a href="#">Cancel Request</a></button>
+    
   </div>
 
 
