--- a/pages/placeorder.html
+++ b/pages/placeorder.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Confirm Order | PetCare</title>
-  <link rel="stylesheet" href="/css_pages/placeorder.css" />
+  <link rel="stylesheet" href="../css_pages/placeorder.css" />
 </head>
 <body>
   
   <header class="navbar">
-    <a href="#" class="logo">Pet<span>Care</span></a>
+    <a href="../index.html" class="logo">Pet<span>Care</span></a>
 
     <div class="search-container">
       <input type="text" placeholder="SEARCH" />
@@ -17,15 +17,15 @@
     </div>
 
     <nav class="nav-links">
-      <a href="#">cart</a>
-      <a href="#">wishlist</a>
-      <a href="#">login</a>
+      <a href="../pages/card.html">cart</a>
+      <a href="../pages/wishlist.html">wishlist</a>
+      <a href="../pages/login_page.html">login</a>
     </nav>
   </header>
 
   
   <div class="back-home">
-    <a href="/index.html">BACK TO HOME</a>
+    <a href="../index.html">BACK TO HOME</a>
   </div>
 
   
@@ -58,7 +58,7 @@
   </main>
 
   
-  <a href="/pages/sucessful.html" class="place-btn">Place Order</a>
+  <a href="../pages/sucessful.html" class="place-btn">Place Order</a>
 
 </body>
 </html>
