--- a/pages/product_details.html
+++ b/pages/product_details.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Page</title>
-  <link rel="stylesheet" href="/css_pages/product_det.css">
+  <link rel="stylesheet" href="../css_pages/product_det.css">
 </head>
 <body>
 
   
   <header class="navbar">
-    <a href="#" class="logo">Pet<span>Care</span></a>
+    <a href="../index.html" class="logo">Pet<span>Care</span></a>
 
     <div class="search-container">
       <input type="text" placeholder="Search for pet products...">
@@ -18,9 +18,9 @@
     </div>
 
     <nav class="nav-links">
-      <a href="#">Cart</a>
-      <a href="#">Wish List</a>
-      <a href="pages/login_page.html">Login</a>
+      <a href="../pages/card.html">Cart</a>
+      <a href="../pages/wishlist.html">Wish List</a>
+      <a href="../pages/login_page.html">Login</a>
     </nav>
   </header>
 
@@ -38,8 +38,8 @@
       <p><strong>DESCRIPTION:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
       <div class="buttons">
-        <a href="cart.html"><button class="add">ADD TO CART</button></a>
-        <a href="order_success.html"><button class="buy">BUY NOW</button></a>
+        <a href="../pages/card.html"><button class="add">ADD TO CART</button></a>
+        <a href="../pages/sucessful.html"><button class="buy">BUY NOW</button></a>
       </div>
     </div>
   </div>
