--- a/pages/sucessful.html
+++ b/pages/sucessful.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Order Success</title>
-  <link rel="stylesheet" href="/css_pages/sucessful.css">
+  <link rel="stylesheet" href="../css_pages/sucessful.css">
   
     
    
@@ -14,11 +14,11 @@
 <body>
 
   <div class="success-box">
-    <img src="/assets/TICK.png" alt="Success">
+    <img src="../assets/TICK.png" alt="Success">
     <h2>ORDER PLACED<br>SUCCESSFULLY</h2>
   </div>
 
-  <a href="/index.html" class="home-btn">BACK TO HOME</a>
+  <a href="../index.html" class="home-btn">BACK TO HOME</a>
 
 </body>
 </html>
