--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PetCare - Shop</title>
-  <link rel="stylesheet" href="/css_pages/wishlist.css">
+  <link rel="stylesheet" href="../css_pages/wishlist.css">
 </head>
 <body>
 
   
   <header class="navbar">
-    <a href="#" class="logo">Pet<span>Care</span></a>
+    <a href="../index.html" class="logo">Pet<span>Care</span></a>
 
     <div class="search-container">
       <input type="text" placeholder="Search for pet products...">
@@ -18,16 +18,16 @@
     </div>
 
     <nav class="nav-links">
-      <a href="#">Cart</a>
-      <a href="#">Wish List</a>
-      <a href="pages/login_page.html">Login</a>
+      <a href="../pages/card.html">Cart</a>
+      <a href="../pages/wishlist.html">Wish List</a>
+      <a href="..pages/login_page.html">Login</a>
     </nav>
   </header>
 
   
   <section class="shop-links">
-    <a href="/pages/dogs_shop.html">Shop for Dogs</a>
-    <a href="/pages/cats_shop.html">Shop for Cats</a>
+    <a href="../pages/dogs_shop.html">Shop for Dogs</a>
+    <a href="../pages/cats_shop.html">Shop for Cats</a>
   </section>
 
   
@@ -63,7 +63,7 @@
   </table>
 
   
-  <a href="/index.html" class="back-btn">BACK TO HOME</a>
+  <a href="../index.html" class="back-btn">BACK TO HOME</a>
 
 </body>
 </html>
