update of paths

--- a/pages/card.html
+++ b/pages/card.html
@@ -54,4 +54,4 @@
       <td>+ 1 -</td>
       <td>RS:</td>
       <td><a href="#" class="add-link">ADD</a></td></tr>
-      <a href="placeorder.html" class="proceed-btn">Proceed to Pay</a>
+      <a href="../pages/placeorder.html" class="proceed-btn">Proceed to Pay</a>
