--- a/pages/product_details.html
+++ b/pages/product_details.html
@@ -28,7 +28,7 @@
   <div class="container">
     <div class="product-image">
       <a href="#">
-        <img src="/assets/CAT.png" alt="Product Image">
+        <img src="../assets/belt.png" alt="Product Image">
       </a>
     </div>
 
