new commit roots

--- a/pages/card.html
+++ b/pages/card.html
@@ -41,17 +41,17 @@
       <th>REMOVE</th>
     </tr>
     <tr>
-      <td><img src="../assets/POSTER3.png" width="50" alt="PetCare Logo"></td>
+      <td><img src="../assets/belt.png" width="50" alt="PetCare Logo"></td>
       <td>TOYS</td>
       <td>+ 1 -</td>
       <td>RS:</td>
-      <td><a href="#" class="add-link">ADD</a></td>
+      <td><a href="../pages/wishlist.html" class="add-link">ADD</a></td>
       <td class="remove">✖</td>
     </tr>
     <tr>
-      <td><img src="../assets/POSTER2.png" width="50" alt="PetCare Logo"></td>
+      <td><img src="../assets/drool_food.png" width="50" alt="PetCare Logo"></td>
       <td>FOOD</td>
       <td>+ 1 -</td>
       <td>RS:</td>
-      <td><a href="#" class="add-link">ADD</a></td></tr>
+      <td><a href="../pages/wishlist.html" class="add-link">ADD</a></td></tr>
       <a href="../pages/placeorder.html" class="proceed-btn">Proceed to Pay</a>
