--- a/pages/dogs_shop.html
+++ b/pages/dogs_shop.html
@@ -40,13 +40,13 @@
 
       
       <div class="offer">
-        <img src="" alt="Offer Icon">
+        <img src="../assets/drool_food.png" alt="Offer Icon">
         <p><strong>Extra ₹30 OFF</strong><br>on orders above ₹1250</p>
         <div class="code">SAVE30</div>
       </div>
 
       <div class="offer">
-        <img src="" alt="Offer Icon">
+        <img src="../assets/POSATER1.png" alt="Offer Icon">
         <p><strong>Extra ₹100 OFF</strong><br>on orders above ₹3000</p>
         <div class="code">SAVE100</div>
       </div>
@@ -56,7 +56,7 @@
  <section class="products">
   <div class="products-header">
     <h2><a href="../pages/cats_shop.html">Shop for cats</a></h2> 
-    <div class="categories">
+    <!-- <div class="categories"> -->
   <!-- <a href="cats-toys.html">Toys</a>
   <a href="cats-food.html">Food</a> -->
   
