--- a/pages/cats_shop.html
+++ b/pages/cats_shop.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PetCare - Shop for Cats</title>
-  <link rel="stylesheet" href="../css_pages/cats_css.css">
+  <link rel="stylesheet" href="../css_pages/dogs.css">
 </head>
 <body>
   
