--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -43,21 +43,21 @@
       <td><img src="../assets/product2.png" width="50" alt="PetCare Logo"></td>
       <td>TOYS</td>
       <td>RS: 250</td>
-      <td><a href="#" class="add-btn">ADD</a></td>
+      <td><a href="../pages/card.html" class="add-btn">ADD</a></td>
       <td><span class="remove">✖</span></td>
     </tr>
     <tr>
       <td><img src="/assets/food.png" width="50" alt="PetCare Logo"></td>
       <td>FOOD</td>
       <td>RS: 450</td>
-      <td><a href="#" class="add-btn">ADD</a></td>
+      <td><a href="../pages/card.html" class="add-btn">ADD</a></td>
       <td><span class="remove">✖</span></td>
     </tr>
     <tr>
       <td><img src="/assets/brush.png" width="50" alt="PetCare Logo"></td>
       <td>LEASH</td>
       <td>RS: 180</td>
-      <td><a href="./card.html" class="add-btn">ADD</a></td>
+      <td><a href="../pages/card.html" class="add-btn">ADD</a></td>
       <td><span class="remove">✖</span></td>
     </tr>
   </table>
