--- a/pages/cats_shop.html
+++ b/pages/cats_shop.html
@@ -41,13 +41,13 @@
 
       
       <div class="offer">
-        <img src="https://cdn-icons-png.flaticon.com/512/929/929430.png" alt="Offer Icon">
+        <img src="../assets/belt.png" alt="Offer Icon">
         <p><strong>Extra ₹30 OFF</strong><br>on orders above ₹1250</p>
         <div class="code">SAVE30</div>
       </div>
 
       <div class="offer">
-        <img src="https://cdn-icons-png.flaticon.com/512/929/929430.png" alt="Offer Icon">
+        <img src="../assets/drool_food.png" alt="Offer Icon">
         <p><strong>Extra ₹100 OFF</strong><br>on orders above ₹3000</p>
         <div class="code">SAVE100</div>
       </div>
